# voting-sol-bootcamp

./: Anchor.toml
programs/voting-program/: Cargo.toml
programs/voting-program/src/: errors.rs  lib.rs
programs/voting-program/src/contexts/: add_choices.rs  create_election.rs  mod.rs  update_election_state.rs  vote.rs
programs/voting-program/src/states/: choices.rs  election.rs  mod.rs  voter.rs
tests/: voting-program.ts
